- FIXED OVERFLOW ISSUE ON SLIDERS

--- a/webdev-projects/styles/spotify.css
+++ b/webdev-projects/styles/spotify.css
@@ -120,8 +120,12 @@ h1 {
 }
 
 .slider {
-  display: flex;
-  flex-direction: row;
+  display: grid;
+  grid-template-columns: repeat(12, 12.25em);
+  min-width: 0;
+  max-width: 100vw;
+  overflow: auto;
+  scrollbar-width: none;
 }
 
 .trending-container {
